tests/samples/invalid/arraylike_of_arraylike.pn

fn foo()
{
	var x: [][]i32;
}

fn bar(x: [][]i32);
